@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - add MooseX::MungeHas in See Also
 
 1.222490  2022-09-06 11:30:14+02:00 Europe/Berlin
     - first release
